force-app/main/default/objects/WS_EmailRoute__mdt/WS_EmailRoute__mdt.object-meta.xml
<CustomObject>
    <description>Configura rotas de Email-to-Case por caixa de entrada, permitindo múltiplas caixas por unidade de negócio sem acoplar a cardinalidade aos parâmetros gerais da unidade.</description>
    <label>Rota de Email de Atendimento</label>
    <pluralLabel>Rotas de Email de Atendimento</pluralLabel>
</CustomObject>