force-app/main/default/objects/WS_EmailRoute__mdt/fields/AllowedFromDomains__c.field-meta.xml
<CustomField>
    <fullName>AllowedFromDomains__c</fullName>
    <description>Lista de domínios permitidos para a rota de e-mail.</description>
    <label>Domínios Permitidos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>