force-app/main/default/objects/WS_EmailRoute__mdt/fields/BusinessEmail__c.field-meta.xml
<CustomField>
    <fullName>BusinessEmail__c</fullName>
    <description>Endereço de e-mail de negócio monitorado para abertura/roteamento de casos.</description>
    <label>E-mail de Negócio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>