force-app/main/default/objects/WS_EmailRoute__mdt/fields/IsDefaultEmailRoute__c.field-meta.xml
<CustomField>
    <fullName>IsDefaultEmailRoute__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se a rota de e-mail é a rota padrão da unidade.</description>
    <label>Rota de E-mail Padrão</label>
    <type>Checkbox</type>
</CustomField>