force-app/main/default/objects/WS_EmailRoute__mdt/fields/PersistEmailAudit__c.field-meta.xml
<CustomField>
    <fullName>PersistEmailAudit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica se o log de auditoria de e-mail deve ser persistido.</description>
    <label>Persistir Auditoria de E-mail</label>
    <type>Checkbox</type>
</CustomField>