force-app/main/default/objects/WS_EmailRoute__mdt/fields/Prioridade__c.field-meta.xml
<CustomField>
    <fullName>Prioridade__c</fullName>
    <description>Prioridade padrão associada à rota de e-mail.</description>
    <label>Prioridade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>