force-app/main/default/objects/WS_EmailRoute__mdt/fields/ReopenStatus__c.field-meta.xml
<CustomField>
    <fullName>ReopenStatus__c</fullName>
    <description>Status a ser aplicado ao case ao ser reaberto pela rota de e-mail.</description>
    <label>Status de Reabertura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>