force-app/main/default/objects/WS_EmailRoute__mdt/fields/RouteKey__c.field-meta.xml
<CustomField>
    <fullName>RouteKey__c</fullName>
    <description>Chave usada para identificar a rota de e-mail.</description>
    <label>Route Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>