force-app/main/default/objects/WS_EmailRoute__mdt/fields/RouteOwnerType__c.field-meta.xml
<CustomField>
    <fullName>RouteOwnerType__c</fullName>
    <description>Tipo de owner usado pela rota de e-mail consolidada.</description>
    <label>Tipo do Owner da Rota</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUEUE</fullName>
                <default>true</default>
                <label>QUEUE</label>
            </value>
            <value>
                <fullName>USER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>